[tool.poetry]
name = "chord"
version = "0.1.0"
description = "Pyhton Implementation of Chord"
authors = ["Ryosuke Abe <chike@sfc.wide.ad.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.37.1"
grpcio-tools = "^1.37.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.812"
pycodestyle = "^2.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
